# autoexplainer

./: 404.html  CHANGELOG.md  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg
.github/actions/python-poetry-env/: action.yml
.github/workflows/: release.yml  test.yml
api_docs/: index.html
changelog/: index.html
demo_results/: run_experiment_script.py
demo_results/CXR_dataset/: CXR_model.pth
demo_results/Imagenette_dataset/: imagenette_model.pth
demo_results/Kandinsky_dataset/: kp_model.pth  train_test_split.py
development/eden/: eden_requirements.txt  script_for_eden.py  script_for_eden_cpu.py
development/eden/output_from_experiments/output_Imagenette_0/: example_report_Imagenette_0.html  report.tex
development/models_training/: all_steps.sh  config_datasets_imagenette.sh  default_config_datasets.sh  launch_parameters_10.py  launch_parameters_3.py  start.sh  start_dataset.sh  train_model.py  training_utils.py
development/notebooks/: auto_explainer_usage.ipynb  generate_plots.ipynb  load_densenet.ipynb  test_your_model.ipynb
development/notebooks/sample_explanations/: results_Imagenette_flat_df.csv  results_Imagenette_nested_df.csv
development/report/: report_test_1.py
development/test_logs/: tests_output.txt  tests_output_gpu.txt
docs/: api_docs.md
docs/reports/: img_report.html  kp_report.html
examples/: example_report.html  report.tex
reports/: cxr_report.html  img_report.html  kp_report.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api_docs/: index.html
site/changelog/: index.html
site/search/: search_index.json
src/autoexplainer/: _constants.py  _descriptions.py  autoexplainer.py  metrics.py  utils.py
src/autoexplainer/explanations/: custom.py  explanation_handlers.py  masks.py
src/autoexplainer/templates/: report.html
tests/: sanity_check.py  test_autoexplainer.py  test_custom.py  test_handlers.py  test_handlers_gpu.py  test_utils.py  utils.py
